Add Regular/ChoiceTask Patch/View/CreateDTOs